[package]
name = "globenv"
version = "0.1.0"
edition = "2021"
authors = ["Dervex"]
repository = "https://github.com/DervexHero/globenv"
description = "Globally set & read environment variables and paths on Windows, macOS or Linux"
keywords = ["environment", "variable", "global", "path", "env"]
categories = ["config", "os"]
license = "Apache-2.0"

[lib]
name = "globenv"
path = "src/lib.rs"

[target.'cfg(windows)'.dependencies]
winreg = "0.51.0"
